--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,11 +77,11 @@ body,
 }
 
 .movie_overview {
-  display: block; /* Fallback for non-webkit */
+  display: block;
   display: -webkit-box;
-  height: 2.6em; /* Fallback for non-webkit, line-height * 2 */
+  height: 2.6em;
   line-height: 1.3em;
-  -webkit-line-clamp: 2; /* if you change this, make sure to change the fallback line-height and height */
+  -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
