--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,6 +35,9 @@ body,
 .header {
   backdrop-filter: blur(10px);
   justify-content: space-between;
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 .header i{
   font-size: 24px;
