--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -5,8 +5,13 @@
   border: 0;
   outline: 0;
   box-sizing: border-box;
+  font-family: "Encode Sans Expanded", sans-serif;
 }
 
-button{
-    background-color: transparent;
+a {
+  text-decoration: none;
+}
+
+button {
+  background-color: transparent;
 }
