--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -128,6 +128,13 @@ body,
   text-overflow: ellipsis;
 }
 
+.user_action{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
 @media screen and (min-width: 768px) {
   .nav {
     display: flex;
