--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,7 +26,8 @@ body,
 }
 
 .header,
-.nav {
+.nav,
+.footer {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -36,7 +37,7 @@ body,
 }
 
 .header {
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(100px);
   justify-content: space-between;
   position: sticky;
   top: 0;
@@ -90,12 +91,15 @@ body,
 }
 
 .btn-default {
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(100px);
   padding: 8px 12px;
   border-radius: 16px;
   color: #f4f8fc;
   cursor: pointer;
   font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
 
 .btn-selected {
@@ -111,7 +115,7 @@ body,
   padding: 16px;
   align-items: flex-start;
   gap: 24px;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(100px);
   border-radius: 8px;
   color: white;
 }
@@ -144,7 +148,7 @@ body,
   width: 100%;
   max-width: 350px;
   padding: 8px;
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(100px);
   border-radius: 4px;
   color: #f4f8fc;
   gap: 16px;
@@ -168,13 +172,23 @@ body,
   justify-content: center;
 }
 
+.footer{
+  backdrop-filter: blur(100px);
+}
+.footer p{
+  width: 100%;
+  text-align: center;
+  color: #f4f8fc;
+  font-weight: 600;
+}
+
 @media screen and (width >= 768px) {
   .form_search,
   .fav_link,
   .nav {
     display: flex;
   }
-  .nav{
+  .nav {
     justify-content: start;
   }
   .movie_list {
@@ -183,7 +197,7 @@ body,
     justify-content: space-evenly;
     padding: initial;
   }
-  
+
   #menu-icon {
     display: none;
   }
@@ -191,7 +205,7 @@ body,
 
 @media screen and (min-width: 1024px) {
   .movie_list {
-    justify-content: space-between;
+    justify-content: start;
   }
 
   .movie {
@@ -207,7 +221,7 @@ body,
 
   .movie_overview,
   .movie_title,
-  .add-to-favorites, 
+  .add-to-favorites,
   .user_action {
     display: none;
   }
