--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -172,14 +172,45 @@ body,
   justify-content: center;
 }
 
-.footer{
+.footer {
   backdrop-filter: blur(100px);
 }
-.footer p{
+.footer p {
   width: 100%;
   text-align: center;
   color: #f4f8fc;
   font-weight: 600;
+}
+
+.loading {
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  position: fixed;
+  z-index: 2;
+  align-items: center;
+  justify-content: center;
+}
+
+.spinner {
+  border-top: 5px solid #f4f8fc;
+  border-right: 5px solid #f4f8fc;
+  border-bottom: 5px solid #f4f8fc;
+  border-left: 5px solid transparent;
+  border-radius: 25px;
+  height: 50px;
+  width: 50px;
+  animation: spin 1s infinite 0s;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @media screen and (width >= 768px) {
