--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,7 +26,6 @@ body,
 }
 
 .header,
-.nav,
 .footer {
   display: flex;
   flex-direction: row;
@@ -93,10 +92,13 @@ body,
 
 .nav {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
+  width: 100%;
   margin: 0 auto;
   align-items: center;
   justify-content: start;
+  gap: 16px;
 }
 
 .btn-default {
